# markov-chain-chat

./: .pre-commit-config.yaml  README.md  pyproject.toml
markovchainbot/: __init__.py  chain.py  config.py  markov_chain.py  readers.py  serialization.py  text.py  utils.py  vocabulary.py
scripts/: reader.py  train.py
