[project]
name = "markovchainbot"
version = "0.1.0"
description = ""
authors = [
  { name = "cy", email = "" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy==2.2.1",
  "pre-commit>=4.2.0",
  "ruff>=0.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

