[project]
name = "markovchainbot"
version = "0.1.0"
description = ""
authors = [
  { name = "cy", email = "" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy==2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

